# widgetsack

./: AGENTS.md  README.md
.github/workflows/: build.yml  test.yml
client/: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/e2e/: groupHug.spec.ts  helpers.ts
client/gallery/: Gallery.tsx  gallery.css  iframe-demo.html  index.html  main.tsx  seed.ts  studio.html
client/scripts/: screenshots.mjs
client/src/: styles.css  test-setup.ts
client/src/lib/: devMock.ts  diag.ts  logs.test.ts  monitorLabel.test.ts  overlay.ts  stt.test.ts  tts.test.ts  viewTransition.test.ts  viewTransition.ts
client/src/lib/audio/: devices.ts  volume.ts
client/src/lib/bridge/: contract.ts
client/src/lib/components/NowPlaying/: np-source.ts  priority.test.ts  priority.ts  source.test.ts  source.ts  sourceList.test.ts
client/src/lib/core/: agenda.test.ts  agenda.ts  airQuality.test.ts  airQuality.ts  audioDevices.test.ts  audioDevices.ts  background.test.ts  battery.test.ts  battery.ts  condition.test.ts  controls.defaults.test.ts  controls.test.ts  countdown.test.ts  countdown.ts  cssLint.test.ts  cssThreats.test.ts  diagnostics.test.ts  disks.test.ts  disks.ts  dragSnap.ts  flowStyle.test.ts  flowStyle.ts  format.test.ts  format.ts  geometry.test.ts  gpu.test.ts  gpu.ts  haControls.test.ts  haControls.ts  haRegistry.test.ts  haRegistry.ts  imageSrc.test.ts  imageSrc.ts  layout.test.ts  layoutEdit.test.ts  layoutEdit.ts  layoutTree.test.ts  llm.test.ts  logs.test.ts  macro.test.ts  (+57 more)
client/src/lib/ddc/: monitors.ts
client/src/lib/formula/: engine.hostthrow.test.ts  engine.initfail.test.ts  engine.test.ts  packageSandbox.hostthrow.test.ts  packageSandbox.initfail.test.ts  packageSandbox.test.ts  packageSandbox.ts
client/src/lib/llm/: source.test.ts  useLlmChat.test.ts  useLlmChat.ts
client/src/lib/widgets/: AudioSwitcherHost.test.tsx  AudioSwitcherHost.tsx  BackgroundLayer.test.tsx  BackgroundPanel.test.tsx  BackgroundPanel.tsx  BoxField.test.tsx  BoxField.tsx  Canvas.css  Canvas.tsx  ColorField.test.tsx  ColorField.tsx  ConditionEditor.test.tsx  ControlsPanel.test.tsx  CssEditor.test.tsx  CssEditorImpl.test.tsx  CssEditorImpl.tsx  DesignerListPanel.test.tsx  DiagnosticsPanel.css  DiagnosticsPanel.test.tsx  DiagnosticsPanel.tsx  DragSnapLayer.css  DragSnapLayer.test.tsx  DragSnapLayer.tsx  ErrorBoundary.test.tsx  FlowNode.test.tsx  GroupFrame.test.tsx  ImageHost.test.tsx  ImageHost.tsx  Inspector.configFields.test.tsx  Inspector.css  Inspector.palette.test.tsx  Inspector.panels.test.tsx  Inspector.test.tsx  Inspector.tsx  Inspector.wiring.test.tsx  MacroEditor.test.tsx  MacroEditor.tsx  MonitorSwitchHost.test.tsx  MonitorSwitchHost.tsx  MultiInspector.test.tsx  (+37 more)
client/src/lib/widgets/canvas/: alignControls.test.ts  alignControls.ts  containerAt.test.ts  debugInfo.test.ts  editorOps.bulk.test.ts  editorOps.defs.test.ts  editorOps.place.test.ts  editorOps.rest.test.ts  editorOps.sizing.test.ts  editorOps.structure.test.ts  editorOps.ts  menuPreview.test.ts  menuPreview.ts  multiSelect.test.ts  overlayPrefs.test.ts  previewTemplate.test.ts  setTokens.test.ts  types.ts  useAutoTheme.test.ts  useAutoTheme.ts  useBackground.test.ts  useBackground.ts  useCanvasPointer.test.ts  useCanvasPointer.ts  useConditionHidden.ts  useControls.test.ts  useDefEditor.test.ts  useDefEditor.ts  useEditorModel.test.ts  useEditorModel.ts  useKeyboard.test.ts  useKeyboard.ts  useMeasuredRects.ts  usePaneSizes.test.ts  usePaneSizes.ts  usePersistence.test.ts  usePersistence.ts  useSacks.test.ts  useSacks.ts  useSavedLayouts.test.ts  (+10 more)
client/src/lib/widgets/meters/: Agenda.css  Agenda.test.tsx  Agenda.tsx  AirQuality.css  AirQuality.test.tsx  AirQuality.tsx  AnalogClock.test.tsx  AudioSwitcher.css  AudioSwitcher.test.tsx  AudioSwitcher.tsx  Bar.test.tsx  Battery.css  Battery.test.tsx  Battery.tsx  Calendar.test.tsx  Calendar.tsx  Clock.test.tsx  Countdown.css  Countdown.test.tsx  Countdown.tsx  Cpu.test.tsx  CpuCoresCanvas.tsx  Disks.css  Disks.test.tsx  Disks.tsx  GpuPanel.css  GpuPanel.test.tsx  GpuPanel.tsx  HaBinarySensor.tsx  HaClimate.css  HaClimate.tsx  HaControls.css  HaCover.tsx  HaFan.tsx  HaInput.test.tsx  HaInput.tsx  HaLight.tsx  HaLock.tsx  HaMediaPlayer.tsx  HaScene.tsx  (+66 more)
client/src/lib/widgets/plugins/: AgendaSettings.test.tsx  AgendaSettings.tsx  HaMediaPlayerHost.test.tsx  HaMediaPlayerHost.tsx  HaSettings.test.tsx  HaSettings.tsx  LlmSettings.test.tsx  LlmSettings.tsx  MqttSettings.test.tsx  MqttSettings.tsx  NowPlayingSettings.test.tsx  NowPlayingSettings.tsx  RssSettings.test.tsx  RssSettings.tsx  StocksSettings.test.tsx  StocksSettings.tsx  TokenListField.test.tsx  TokenListField.tsx  WeatherSettings.test.tsx  WeatherSettings.tsx  agenda-commands.ts  agenda-source.ts  agenda-types.ts  agenda.test.ts  agenda.ts  ha-backfill.test.ts  ha-backfill.ts  ha-commands.ts  ha-exposed-store.test.ts  ha-source.ts  home-assistant.test.ts  home-assistant.ts  index.ts  llm-commands.ts  llm-studio.test.ts  llm-tts.test.ts  llm.test.ts  mqtt.test.ts  now-playing.test.tsx  packages-commands.ts  (+15 more)
client/src/mcp/: tools.test.ts  tools.ts
client/src/stores/: persist.test.ts  stores.test.ts  stores.ts
docs/: theming.md  third-party-plugins.md  widgets.md
widgetsack/: Cargo.toml  tauri.conf.json
widgetsack/capabilities/: overlay.json
widgetsack/src/: agenda.rs  art.rs  audio.rs  autostart.rs  bridge.rs  clickthrough.rs  command.rs  control.rs  ddc.rs  display.rs  displaywatch.rs  event.rs  ha.rs  keepalive.rs  listener.rs  llm.rs  log.rs  main.rs  media.rs  mqtt.rs  netconn.rs  ping.rs  recyclebin.rs  rss.rs  secure_config.rs  sensors.rs  state.rs  stocks.rs  timings.rs  weather.rs  wifi.rs  windowmgr.rs
widgetsack/windows/: hooks.nsh  installer.nsi
