[package]
name = "widgetsack"
# Keep in lockstep with tauri.conf.json's version (the bundle/updater source of truth).
version = "0.0.42"
description = "widgetsack desktop widget platform"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = ""
default-run = "widgetsack"
edition = "2024"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
# CSPRNG for the agent-control server's per-launch auth token (OS RNG: BCryptGenRandom on Windows —
# no NASM/cmake). Already in the dependency tree transitively.
getrandom = "0.2"
# TLS for the HA client (wss/https) via the OS-native stack: SChannel on this Windows-only
# build — no OpenSSL, and no aws-lc-rs/ring (so no NASM/cmake build tooling). Used directly
# only to build the self-signed-cert connector; reqwest/tungstenite use it via their features.
native-tls = "0.2"
notify = "6"
nvml-wrapper = "0.10"
# HA control + entity catalog over REST. native-tls enables https; self-signed certs are an
# explicit per-config opt-in (HaConfig.insecure → danger_accept_invalid_certs).
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "stream", "multipart"] }
# Optional MQTT source (peer to HA). default-features=false + use-native-tls reuses the existing
# native-tls=0.2 (SChannel) and pulls in NO rustls/aws-lc-rs/ring — keeping the no-NASM/cmake stance.
rumqttc = { version = "0.25", default-features = false, features = ["use-native-tls"] }
serde_json = "1.0"
# "rc" lets `Arc<T>`/`Rc<T>` derive Serialize — used to hold album-art bytes behind an Arc so carrying
# them forward across media timeline updates (state.rs) is a pointer copy, not a memcpy. Serialize-only
# here (the frontend consumes the JSON), so the rc-feature's no-shared-identity-on-deserialize caveat
# does not apply.
serde = { version = "1.0", features = ["derive", "rc"] }
# Real-input FFT for the audio spectrum widget (wraps rustfft; ~2x faster than a full complex FFT
# for real audio). Pure Rust, SIMD-accelerated, cross-platform — the DSP seams in audio.rs are
# unit-tested on any OS even though capture (wasapi) is Windows-only.
realfft = "3"
sysinfo = "0.33"
tauri = { version = "2", features = ["devtools", "protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
# HA WebSocket stream. native-tls handles wss:// (valid certs transparently via connect_async;
# self-signed via connect_async_tls_with_config with an explicit insecure connector).
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "native-tls"] }
fontdb = "0.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# Second-launch focuses the running app instead of spawning a duplicate overlay (emits open_studio).
tauri-plugin-single-instance = "2"
# "Launch at login" toggle (wired to the Settings UI separately); LaunchAgent on macOS, registry on Windows.
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
win-gsmtc = { version = "0.1.0", features = ["serde"] }
# Read/write the durable launch-at-login preference in HKCU (autostart.rs). The Run key alone
# doesn't survive a manual install (the NSIS uninstaller wipes it), so we persist a preference
# and re-assert on startup. Already in the lock tree (auto-launch / embed-resource pull winreg).
winreg = "0.55"
# The #[interface] macro (audio.rs IPolicyConfig: set the default audio endpoint) expands to
# ::windows_core paths, so the crate must be a direct dependency. Pinned to windows 0.61's core.
windows-core = "0.61"
# WASAPI loopback capture for the audio spectrum widget. Safe-ish bindings over windows-rs that
# encapsulate GetMixFormat / SampleType (float vs int) / the loopback init flags. Kept at the
# audio.rs edge (anti-corruption layer, like win-gsmtc for media). Windows-only.
wasapi = "0.23"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    # Friendly monitor names (display.rs): the Connecting-and-Configuring-Displays API —
    # QueryDisplayConfig + DisplayConfigGetDeviceInfo (DISPLAYCONFIG_TARGET/SOURCE_DEVICE_NAME) maps the
    # GDI device name (\\.\DISPLAYn) Tauri exposes to the EDID model name for the studio's switcher.
    "Win32_Devices_Display",
    "Win32_System_Com",
    # Win32 system sensors: GetSystemPowerStatus (battery.*) + CallNtPowerInformation (live CPU MHz)
    # live in Win32_System_Power; GetPerformanceInfo (commit/cache/kernel/handle/thread) in
    # ProcessStatus; GetTickCount64 + GetLastInputInfo (host.idle) in SystemInformation +
    # UI_Input_KeyboardAndMouse.
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    # Toolhelp process snapshot (netconn.rs: pid → exe name for the active-connections panel).
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    # Live disk I/O: DeviceIoControl(IOCTL_DISK_PERFORMANCE) on a volume handle — CreateFileW +
    # FILE_SHARE_* / OPEN_EXISTING in Storage_FileSystem (CreateFileW pulls in Security for its
    # SECURITY_ATTRIBUTES param), DeviceIoControl in System_IO, IOCTL_DISK_PERFORMANCE +
    # DISK_PERFORMANCE in System_Ioctl.
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    # Network link speed / adapter state: GetIfTable2 + MIB_IF_ROW2 in IpHelper; the
    # IF_OPER_STATUS / NET_IF_MEDIA_CONNECT_STATE enums (and the cfg-gated row struct) in Ndis.
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    # Wi-Fi detail (wifi.rs): WlanOpenHandle/EnumInterfaces/QueryInterface(current_connection +
    # channel_number) → SSID / signal / PHY / channel for the Wi-Fi widget.
    "Win32_NetworkManagement_WiFi",
    # Landing-zone foreign-window manager (windowmgr.rs): EnumWindows / GetWindowRect / SetWindowPos /
    # ShowWindow / GetWindow*W / GetWindowThreadProcessId / the WS_EX_*/SWP_*/SW_* constants + the
    # EVENT_SYSTEM_MOVESIZE* / WINEVENT_* / MSG / GetMessageW message-pump in WindowsAndMessaging;
    # OpenProcess + QueryFullProcessImageNameW for exe resolution in Threading;
    # DwmGetWindowAttribute(EXTENDED_FRAME_BOUNDS/CLOAKED) in Dwm; SetWinEventHook (live drag
    # detection, MVP2) + OBJID_WINDOW in Accessibility.
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    # Recycle Bin contents (recyclebin.rs): SHQueryRecycleBinW → item count + total size.
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Media",
    "Media_Control",
    # System master volume + mute (audio.rs Volume widget): IMMDeviceEnumerator/IMMDevice in
    # Win32_Media_Audio, IAudioEndpointVolume in Win32_Media_Audio_Endpoints.
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Foundation",
    "Foundation_Collections",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

